Added rtf exception

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 ## Ignore java class files
 *.class
 
+## Ignore code.rtf files used for printing code
+code.rtf
+Code.rtf
+
 ## EXE Files
 #*.exe
 
